# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note
19-Dec-2010 Jean-Marie Simonet
 # [#23819] Self-Registering Users aren't assigned any usergroup. Thanks Elin.
 # [#22982] fix: JURI::root(true) -> JURI::root() (template preview). Thanks Rune.
 # [#23889] Action ordering com_users. Thanks Sander.
 # [#23880] Contact-form emty. No inputfields. Thanks Bill.
 
18-Dec-2010 Ian MacLennan
 # [#23874] JPluginHelper::importPlugin('users') instead of JPluginHelper::importPlugin('user')

18-Dec-2010 Jean-Marie Simonet
 # [#23799] Can't uninstall Beez and Bluestork templates.
 $ Updating Milkyway description
 # [#23865] Missing language string. Thanks Bill.
 
17-Dec-2010 Jean-Marie Simonet
 # [#23670] Non-installed languages display in the Language Manager Installed view. Thanks Pooja.
 # [#23809] Special characters used in menu names should be converted to HTML equivalents. Thanks Christophe.
 # Updating templates sql
 #$ Adding language folders in administrator templates
 $ Correcting language Key
 # [#23843] wrong lang string called by com_messages. Thanks Stefania
 # [#23676] Link Weblinks in Module causes error. Thanks Tim.
 $ Missing weblinks error strings in front-end.
 
17-Dec-2010 Ian MacLennan
 # [#22035] Custom HTML module filtering issues

16-Dec-2010 Jean-Marie Simonet
 $ [#23786] Extension manager language file error. Thanks Bill.
 # [#23800] News feed language direction default value. Thanks Bill.
 $ [#23795] Prevent disabling ALL authentication plugins. Thanks Bill.
 #[#23788] Fail to move or copy category to root. Thanks Mark.

15-Dec-2010 Mark Dexter
# Fix typo in configuration language file

15-Dec-2010 Jean-Marie Simonet
 $ Modifying strings wrong value
 # Changing link to language packs
 $ [#23797] Correction of language in banner manager. Thanks Bill.
 $ [#23787] Redirect manager state - published or enabled
 
-------------------- 1.6.0 RC1 Release [14-Dec-2010] ------------------

14-Dec-2010 Mark Dexter