@@ -230,7 +230,7 @@ abstract class JModelForm extends JModel
 		if ($return === false) {
 			// Get the validation messages from the form.
 			foreach ($form->getErrors() as $message) {
-				$this->setError($message);
+				$this->setError(JText::_($message));
 			}
 
 			return false;
