@@ -1,5 +1,5 @@
 /**
- * @version		$Id: validate.js 18678 2010-08-27 05:17:19Z eddieajau $
+ * @version		$Id: validate.js 19871 2010-12-14 01:53:28Z ian $
  * @copyright	Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
@@ -63,7 +63,7 @@ var JFormValidator = new Class({
 	attachToForm: function(form)
 	{
 		// Iterate through the form object and attach the validate method to all input fields.
-		form.getElements('fieldset').concat($A(form.elements)).each(function(el){
+		form.getElements('input,textarea,select').each(function(el){
 			if (($(el).get('tag') == 'input' || $(el).get('tag') == 'button') && $(el).get('type') == 'submit') {
 				if (el.hasClass('validate')) {
 					el.onclick = function(){return document.formvalidator.isValid(this.form);};
@@ -76,7 +76,7 @@ var JFormValidator = new Class({
 
 	validate: function(el)
 	{
-		var el = $(el);
+		el = $(el);
     
 		// Ignore the element if its currently disabled, because are not submitted for the http-request. For those case return always true.
 		if(el.get('disabled')) {
