@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#22982] fix: JURI::root(true) -> JURI::root() (template preview). Thanks Rune.
  # [#23889] Action ordering com_users. Thanks Sander.
  # [#23880] Contact-form emty. No inputfields. Thanks Bill.
+ # [#23820] Missing Lang Strings because of validate.js
  
 18-Dec-2010 Ian MacLennan
  # [#23874] JPluginHelper::importPlugin('users') instead of JPluginHelper::importPlugin('user')
